# IsabelleLangchain

./: .gitignore  IsabelleLangchain.code-workspace  README.md  notes.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: codeInterpreter.ipynb  data_wrangling.ipynb  freewilly2.ipynb  langchain2.ipynb  mermaid.ipynb  pythonrepl.ipynb  scrapeLanternpay.ipynb  scrapeSteinel.ipynb  steinel_scraped_documents.pkl
src/ndis/: app.py  home.py  modules.ipynb  ndis v0.ipynb  ndis v1.ipynb  ndis v2.ipynb  ndis-b2.ipynb  ndis.ipynb
src/ndis/modules/: chatbot.py  retriever.py
