[tool.poetry]
name = "isabellelangchain"
version = "0.1.0"
description = "Chatbot using Langchain"
authors = ["IsisChameleon <12711084+IsisChameleon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pinecone-client = "^2.2.2"
langchain = "^0.0.201"
openai = "^0.27.8"
wikipedia = "^1.4.0"
google-api-python-client = "^2.89.0"
unstructured = "^0.7.5"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
