[tool.poetry]
name = "isabellelangchain"
version = "0.1.0"
description = "Chatbot using Langchain"
authors = ["IsisChameleon <12711084+IsisChameleon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pinecone-client = "^2.2.2"
langchain = "^0.0.234"
openai = "^0.27.8"
wikipedia = "^1.4.0"
google-api-python-client = "^2.89.0"
unstructured = "^0.7.5"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"
apify-client = "^1.2.2"
chromadb = "^0.3.26"
arxiv = "^1.4.7"
pypdf = "^3.12.0"
geopandas = "^0.13.2"
streamlit = "^1.24.1"
transformers = "^4.31.0"
duckduckgo-search = "^3.8.4"
pdfplumber = "^0.10.2"
aioboto3 = "^11.3.0"
deeplake = "^3.6.21"
streamlit-chat = "^0.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
